--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.54.9"
+    "sass": "^1.54.9",
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
